--- a/timeline-animated.html
+++ b/timeline-animated.html
@@ -727,6 +727,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 
     <script src="js/adaptive.js"></script>
+    <script> 
+        for (var index = 1; index < 226; index++) {
+            let element = document.createElement("img");
+            let new_src = "../Style/Resources/Casualties_visualisation/casualties/" + ("0000000" + index).slice(-4) + ".jpg";
+            element.src = new_src;
+            element.classList.add("full-screen");
+            element.classList.add("img-" + index);
+            document.getElementsByClassName(object)[0].appendChild(element);
+        }
+    <script>
     <script src="js/gsap.js"></script>
     <script src="js/preloader.js"></script>
 
