--- a/auf-einen-blick.html
+++ b/auf-einen-blick.html
@@ -12,12 +12,18 @@
 </head>
 
 <body>
+    
     <div id="container-16-9"></div>
 
     <div class="waves-container">
         <div class="waves waves_1"></div>
         <div class="waves waves_2"></div>
     </div>
+
+    <a class="home-button-container" href="index.html">
+        <img class="home-button" href="index.html" src="Style/Resources/Icons/home.svg" alt="home-button">
+        <img class="home-button-hover" src="Style/Resources/Icons/home.svg" alt="home-button">
+    </a>
 
     <div class="inhalt">
         <h1 class="title">Der <i class="title-light">Korea</i> Krieg</h1>
@@ -46,6 +52,17 @@
         <div class="img-container">
             <img class="" src="Style/Resources/Casualties_visualisation/casualties_overwiew.jpg"
                 alt="casualties_overwiew">
+
+            <div class="main-text disclaimer">Quellen: <a href="https://en.wikipedia.org/wiki/Korean_War#Casualties"
+                    target="_blank">https://en.wikipedia.org/wiki/Korean_War#Casualties</a>,
+                <a href="https://www.britannica.com/event/Korean-War"
+                    target="_blank">https://www.britannica.com/event/Korean-War</a>; Die genauen Zahlen sind
+                umstritten. (Zu China: Die
+                dargestellen Zahlen entsprechen US/südkoreanischen Schätzungen. Offizielle chinesische Zahlen sind
+                152.000 getötet
+                und 238.000 verwundet. Zu UN(USA): 36.568 der Getöteten und 103.284 der Verwundeten waren amerikanische
+                Soldaten.)
+            </div>
         </div>
     </div>
 
