--- a/timeline.html
+++ b/timeline.html
@@ -20,6 +20,11 @@
         <div class="waves waves_2"></div>
     </div>
 
+    <a class="home-button-container" href="index.html">
+        <img class="home-button" href="index.html" src="Style/Resources/Icons/home.svg" alt="home-button">
+        <img class="home-button-hover" src="Style/Resources/Icons/home.svg" alt="home-button">
+    </a>
+
     <div class="images">
         <img class="map1 full-screen" src="Style/Resources/Korea_Map/Korean War Maps/map1_teilung_am_38_bg.svg"
             alt="map1">
@@ -53,7 +58,7 @@
             <p class="time-stamp dark"><i class="time-stamp-light">August / September</i> 1948</p>
             <p class="main-text dark">Infolge steigender Spannungen des Kalten Krieges wurden die zwei Besatzungszonen
                 zu zwei souveränen Staaten. Die Demokratische Volksrepublik Korea im Norden, unter der kommunistischen
-                Führung Kim Il-sungs und die Republik Korea im Süden, unter der autokratischen Führung Rhree Syngmans.
+                Führung Kim Il-sungs und die Republik Korea im Süden, unter der autokratischen Führung Rhee Syngmans.
             </p>
         </div>
 
@@ -113,7 +118,8 @@
 
         <div class="sep-28">
             <div class="time-stamp dark">15.-28. <i class="time-stamp-light">September</i>&#8239 1950</div>
-            <p class="main-text dark"><b>Landung bei Incheon:</b> Mit einer Stärke von 40.000 Mann und 261 Schiffen, sowie
+            <p class="main-text dark"><b>Landung bei Incheon:</b> Mit einer Stärke von 40.000 Mann und 261 Schiffen,
+                sowie
                 zahlreichen Flugzeugen gelang es den südlichen Kräften einen Brückenkopf in den Rücken der
                 nordkoreanischen Armee zu schlagen und so eine erste Kriegswende herbeizuführen. Der gleichzeitige
                 Gegenangriff der 8. US-Armee und südkoreanischer Streitkräfte aus dem Busan-Perimeter brachte die
@@ -167,7 +173,8 @@
 
         <div class="nov-24">
             <div class="time-stamp dark">24. <i class="time-stamp-light">November</i>&#8239 1950</div>
-            <p class="main-text dark">Da Die USA den chinesischen Vorstoß trotz des Erfolges noch nicht als Intervention im
+            <p class="main-text dark">Da Die USA den chinesischen Vorstoß trotz des Erfolges noch nicht als Intervention
+                im
                 großen Maßstab, sondern eher als Drohgebärde sahen, startete MacArthur am 24. November eine neue
                 Offensive, die <b>Home-by-Christmas-Offensive</b>. MacArthur unterschätzte seine Gegner und nahm an,
                 dass sich nicht mehr als höchstens 30.000 Chinesen in den Bergen der Grenzregion versteckt halten
@@ -199,7 +206,8 @@
 
         <div class="jan-1">
             <div class="time-stamp dark">1. <i class="time-stamp-light">Januar</i>&#8239 1951</div>
-            <p class="main-text dark"><b>Start der 3. Phase Offensive:</b> 400.000 chinesische und 100.000 nordkoreanische
+            <p class="main-text dark"><b>Start der 3. Phase Offensive:</b> 400.000 chinesische und 100.000
+                nordkoreanische
                 Soldaten begannen am 1. Januar eine Offensive, der die 200.000 südlichen Streitkräfte nicht standhalten
                 konnten. Diese Offensive ist auch unter <b>Chinese new Year's Offensive</b> bekannt.
             </p>
@@ -217,7 +225,8 @@
 
         <div class="feb">
             <div class="time-stamp dark"><i class="time-stamp-light">Februar</i>&#8239 1951</div>
-            <p class="main-text dark">Ende Januar/ Anfang Februar starteten südliche Kräfte erste Rückeroberungsversuche in
+            <p class="main-text dark">Ende Januar/ Anfang Februar starteten südliche Kräfte erste Rückeroberungsversuche
+                in
                 den Norden. Zeitgleich unternahm die südkoreanische Armee Anfang Februar Operationen, die Sympathisanten
                 Nordkoreas und Partisanen vernichten sollte. Während dieser Operation kam es zu mehreren Massakern, bei
                 denen mehrere tausend Zivilisten getötet wurden. Mitte Februar startete die Volksfreiwilligenarmee die
@@ -228,7 +237,8 @@
 
         <div class="mrz-14">
             <div class="time-stamp dark">14. <i class="time-stamp-light">März</i>&#8239 1951</div>
-            <p class="main-text dark">Soul wird von den südkoreanischen Truppen eingenommen. Ein Großteil der Einwohner war
+            <p class="main-text dark">Soul wird von den südkoreanischen Truppen eingenommen. Ein Großteil der Einwohner
+                war
                 zuvor von den kombinierten chinesischen und nordkoreanischen Streitkräften verschleppt oder bei
                 Widerstand getötet worden. Die frühere 1.5 Millionen Stadt zählte nun nur noch 200.000 Einwohner. Die
                 UN-Einheiten
@@ -239,21 +249,24 @@
 
         <div class="apr-11">
             <div class="time-stamp dark">11. <i class="time-stamp-light">April</i>&#8239 1951</div>
-            <p class="main-text dark">Trumam entließ MacArthur, da er die Richtlinien der amerikanischen Regierung und der UN
+            <p class="main-text dark">Trumam entließ MacArthur, da er die Richtlinien der amerikanischen Regierung und
+                der UN
                 nicht rückhaltlos unterstützt hatte, und ersetzte ihn durch <b>General Matthew B. Ridgway</b>.
             </p>
         </div>
 
         <div class="apr">
             <div class="time-stamp dark"><i class="time-stamp-light">April</i>&#8239 1951</div>
-            <p class="main-text dark"><b>Start der 5. Phase Offensive:</b> Die Volksfreiwilligenarmee startete mit 700.000
+            <p class="main-text dark"><b>Start der 5. Phase Offensive:</b> Die Volksfreiwilligenarmee startete mit
+                700.000
                 Mann die 5. Phase Offensive, deren Schwung schon bald nachließ und nördlich von Seoul zu einem Halt kam.
             </p>
         </div>
 
         <div class="mai-15">
             <div class="time-stamp dark">15. <i class="time-stamp-light">Mai</i>&#8239 1951</div>
-            <p class="main-text dark">Auch der zweite Versuch der 5. Phase Offensive, der am 15. Mai gestartet wurde, war
+            <p class="main-text dark">Auch der zweite Versuch der 5. Phase Offensive, der am 15. Mai gestartet wurde,
+                war
                 nicht erfolgreich. Die 5. Phase Offensive kostete der Volksfreiwilligenarmee insgesamt rund 102.000
                 Soldaten. Der desaströse
                 Reinfall der 5. Offensive führte dazu, dass die chinesischen Führer ihr Ziel, die UN aus Korea zu
@@ -264,7 +277,8 @@
 
         <div class="jun-14">
             <div class="time-stamp dark">Bis zum 14. <i class="time-stamp-light">Juni</i>&#8239 1951</div>
-            <p class="main-text dark">Der 5. Phase Offensive folgte die <b>Mai-Juni Counteroffensive</b> der südkoreanischen
+            <p class="main-text dark">Der 5. Phase Offensive folgte die <b>Mai-Juni Counteroffensive</b> der
+                südkoreanischen
                 und
                 UN-Truppen, denen es gelang Land bis 10km nördlich des 38. Breitengrades zu erobern. Chinesische und
                 nordkoreanische Kräfte litten unter dieser Offensive (73.000 Verluste).
@@ -274,7 +288,8 @@
         <div class="jul-53">
             <div class="time-stamp dark"><i class="time-stamp-light">Juli</i>&#8239 1951 - <i
                     class="time-stamp-light">Juli</i>&#8239 1953</div>
-            <p class="main-text dark"><b>Stellungskrieg:</b> Nach diplomatischen Kontakten zwischen der UdSSR und den USA im
+            <p class="main-text dark"><b>Stellungskrieg:</b> Nach diplomatischen Kontakten zwischen der UdSSR und den
+                USA im
                 Mai 1951 in New York kam es am 10. Juli 1951 zu einem ersten Treffen in Kaesŏng in Nordkorea. Im Oktober
                 wurden die Waffenstillstandsverhandlungen nach Panmunjom verlegt, 62 Kilometer nordwestlich von Seoul,
                 wo der Frontverlauf annähernd den 38. Breitengrad berührte. Während die Verhandlungen in einer neutralen
