--- a/auf-einen-blick.html
+++ b/auf-einen-blick.html
@@ -46,11 +46,11 @@
         </div>
 
         <div class="img-container">
-            <img class="" src="Style/Resources/Korea_Map/Korean War Maps/korean_war_verlauf_map.png"
+            <img class="img" src="Style/Resources/Korea_Map/Korean War Maps/korean_war_verlauf_map.png"
                 alt="krieg verlauf map">
         </div>
         <div class="img-container">
-            <img class="" src="Style/Resources/Casualties_visualisation/casualties_overwiew.jpg"
+            <img class="img" src="Style/Resources/Casualties_visualisation/casualties_overwiew.jpg"
                 alt="casualties_overwiew">
 
             <div class="main-text disclaimer">Quellen: <a href="https://en.wikipedia.org/wiki/Korean_War#Casualties"
