--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                         target="_blank">https://de.wikipedia.org/wiki/Koreakrieg</a>
                     <br>
                     <a href="https://www.britannica.com/event/Korean-War"
-                        target="blank">https://www.britannica.com/event/Korean-War</a>
+                        target="_blank">https://www.britannica.com/event/Korean-War</a>
                     <br>
                     <a href="https://youtu.be/fBeiD6kGugE"
-                        target="blank">The Korean War: Every Day</a>
+                        target="_blank">The Korean War: Every Day</a>
 
                 </p>
             </div>
