--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Koreakrieg, Koreakrieg interaktiv, PuuTzzA">
     <title>Der Koreakrieg</title>
     <link rel="icon" type="image/x-icon" href="Style/Resources/Icons/Korea-map-mini.svg">
     <link rel="stylesheet" href="Style/style-main.css">
