--- a/timeline.html
+++ b/timeline.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Koreakrieg Timeline</title>
+    <title>Koreakrieg Zeitstrahl</title>
     <link rel="icon" type="image/x-icon" href="Style/Resources/Icons/Korea-map-mini.svg">
     <link rel="stylesheet" href="Style/style-main.css">
     <link rel="stylesheet" href="Style/style-timeline.css">
