--- a/timeline-animated.html
+++ b/timeline-animated.html
@@ -745,7 +745,7 @@
 
             <div class="title infos info-2">
                 Der Koreakrieg zählt zu den tödlichsten
-                <br> Konflikten des kalten Krieges
+                <br> Konflikten des Kalten Krieges
             </div>
 
             <div class="title infos info-3">
